# akvmodel

./: CHANGELOG.md  CITATION.cff  CITATION.tff  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  akvmodel.py  example.ipynb  pyproject.toml
.github/workflows/: python-package.yml
docs/: akvmodel.md
scr/akv_model/: akv_model.py
