[project]
name = "akvmodel"
version = "1.0.0"
authors = [
    { name = "José C. Oliveira", email = "josecarlosdeoliveirajr@gmail.com" },
    { name = "Sophia Knight", email = "sophia.knight@gmail.com" },
]
maintainers = [
    { name = "José C. Oliveira", email = "josecarlosdeoliveirajr@gmail.com" },
]
description = "A tool for social network simulations in the Alvim-Knight-Valencia model."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy"]

[project.urls]
"Homepage" = "https://github.com/joseoliveirajr/akvmodel"
"Bug Tracker" = "https://github.com/joseoliveirajr/akvmodel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"